@@ -1099,6 +1099,10 @@ util_curl_unsetopt(CurlObject *self, int option)
     case CURLOPT_PASSWORD:
 #endif
     case CURLOPT_RANGE:
+#if LIBCURL_VERSION_NUM >= 0x072b00 /* check for 7.43.0 or greater */
+    case CURLOPT_SERVICE_NAME:
+    case CURLOPT_PROXY_SERVICE_NAME:
+#endif
         SETOPT((char *) 0);
         break;
 
@@ -1247,6 +1251,10 @@ do_curl_setopt(CurlObject *self, PyObject *args)
 #endif
 #ifdef HAVE_CURL_7_25_0_OPTS
         case CURLOPT_MAIL_AUTH:
+#endif
+#if LIBCURL_VERSION_NUM >= 0x072b00 /* check for 7.43.0 or greater */
+    case CURLOPT_SERVICE_NAME:
+    case CURLOPT_PROXY_SERVICE_NAME:
 #endif
 /* FIXME: check if more of these options allow binary data */
             str = PyText_AsString_NoNUL(obj, &encoded_obj);
