@@ -1,6 +1,8 @@
 master
 ------
 
+        * Added CURLOPT_SERVICE_NAME (libcurl 7.43.0+).
+
         * Added CURLOPT_PROXY_SERVICE_NAME (libcurl 7.43.0+).
 
         * Added CURLE_SSL_CRL_BADFILE, CURLE_SSL_INVALIDCERTSTATUS
